# WheelPFC

./: CMakeLists.txt  README.md  main.cpp
wheel_core/: CMakeLists.txt
wheel_core/include/wheel_core/: api.hpp  cart.hpp  my_wheel.hpp  ram.hpp
wheel_core/src/: api.cpp  my_wheel.cpp  ram.cpp  script.cpp
wheel_io/: CMakeLists.txt
wheel_io/include/glad/: glad.h
wheel_io/include/wheel_io/: iodevice.hpp
wheel_io/src/: glad.c  iodevice.cpp
